changed build settings for Assignment 2

--- a/UnityProjects/Spring Assignment 2/Spring Assignment 2 Build/index.html
+++ b/UnityProjects/Spring Assignment 2/Spring Assignment 2 Build/index.html
@@ -24,11 +24,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Builds.loader.js";
+      var loaderUrl = buildUrl + "/Spring Assignment 2 Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Builds.data.br",
-        frameworkUrl: buildUrl + "/Builds.framework.js.br",
-        codeUrl: buildUrl + "/Builds.wasm.br",
+        dataUrl: buildUrl + "/Spring Assignment 2 Build.data",
+        frameworkUrl: buildUrl + "/Spring Assignment 2 Build.framework.js",
+        codeUrl: buildUrl + "/Spring Assignment 2 Build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Spring Assignment 2",
